--- a/src/main/resources/templates/back-end/backend_opinion.html
+++ b/src/main/resources/templates/back-end/backend_opinion.html
@@ -25,16 +25,16 @@
             <h1>收件匣</h1>
 
             <ul class="row rhead" style="display: flex; justify-content: space-between; width: calc(765px - 40px); padding: 0 20px; gap: 10px;">
-                <li style="width: 110px; text-align: center;">會員暱稱</li>
-                <li style="width: 350px;">意見標題</li>
+                <li style="width: 120px; text-align: center;">會員暱稱</li>
+                <li style="width: 340px;">意見標題</li>
                 <li style="width: 100px; text-align: center;">提出時間</li>
                 <li style="width: 70px;text-align: center;">處理狀態</li>
                 <li style="width: 50px;text-align: center;">操作</li>
             </ul>
             
             <ul class="row" style="display: flex; justify-content: space-between; width: calc(765px - 40px); padding: 0 20px; gap: 10px;">
-                <li style="width: 110px; text-align: center;">abcdef</li>
-                <li style="width: 350px;">驗證信都收不到</li>
+                <li style="width: 120px; text-align: center;">ZZZZZZZZZZZZ</li>
+                <li style="width: 340px;">驗證信都收不到</li>
                 <li style="width: 100px; text-align: center;">2024.1.1</li>
                 <li style="width: 70px;text-align: center;">已回覆</li>
                 <li class="content-expand"  style="width: 50px;text-align: center;">查看</li>
@@ -43,11 +43,11 @@
             <div class="check-content hidden">
                 <div class="check-content-title">
                     <div class="send-from">
-                        <p>寄信人</p>
-                        <p>abcdef</p>
+                        <p>會員暱稱</p>
+                        <p>ZZZZZZZZZZZZ</p>
                     </div>
                     <div class="send-time">
-                        <p>時間</p>
+                        <p>提出時間</p>
                         <p>2024.1.1</p>
                     </div>
                     <div class="reply-state">
