--- a/src/main/resources/templates/front-end/included-header.html
+++ b/src/main/resources/templates/front-end/included-header.html
@@ -31,7 +31,7 @@
                                     <a href="./g2-02-course-school.html">線上課程<i class="feather-chevron-down"></i></a>
                                 </li>
 
-                                <li class="not-hamber"><a href=""><img src="./@{/images/bell.png" alt=""></a></li>
+                                <li class="not-hamber"><a href=""><img src="./@{/images/bell.png}" alt=""></a></li>
                                 <li class="not-hamber"><a href="./g2-cart.html"><img th:src="@{images/cart.png}" alt=""></a></li>
                                 <li class="not-hamber">
                                     <a href="" class="button_model feed_back">
