--- a/src/main/resources/templates/front-end/member_sidebar.html
+++ b/src/main/resources/templates/front-end/member_sidebar.html
@@ -9,7 +9,7 @@
 				</div>
 				<nav class="mainmenu-nav">
 					<ul class="dashboard-mainmenu rbt-default-sidebar-list">
-						<li><a href="student-dashboard.html"><i
+						<li><a href="/socialpost/"><i
 								class="feather-home"></i><span>會員社群</span></a></li>
 						<li><a href="student-profile.html"><i
 								class="feather-user"></i><span>意見回饋</span></a></li>
