--- a/src/main/resources/static/css/backend/style.css
+++ b/src/main/resources/static/css/backend/style.css
@@ -237,4 +237,76 @@ tr:nth-child(2n+3){
 }
 
 
+/* 彈窗 */
+
+#lightbox{
+    position: fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height: 100vh;
+    background-color: hsla(0, 0%, 0%, .5);
+    z-index: 3;
+}
+
+
+#lightbox article{  
+    background-color: white;
+    width: 90%;
+    max-width: 800px;
+    border-radius: 10px;
+    box-shadow: hsla(0, 0%, 0%, .5);
+    padding: 10px;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+  
+    padding: 50px 0;
+}
+
+#lightbox .article-inner-wrapper{
+    width: 90%;
+    margin: 0 auto;
+}
+
+#lightbox h1{
+    font-size: 30px;
+    margin-left: 0;
+    margin-bottom: 20px;
+}
+
+#lightbox .title-1{
+    font-size: 22px;
+    margin-bottom: 15px;
+}
+
+#lightbox .news-title{
+    display: flex;
+    margin-bottom: 10px;
+}
+
+#lightbox .news-title p{
+    font-size: 22px;
+}
+
+#lightbox .news-title input{
+    
+}
+
+#lightbox textarea{
+    width: 100%;
+}
+
+#lightbox .news-send-content{
+    padding: 20px;
+    border:1px solid black;
+    border-radius: 10px;
+}
+
+
+.none{
+	display:none;
+}
+
 
