--- a/src/main/resources/templates/front-end/socialpost/student_socialpost.html
+++ b/src/main/resources/templates/front-end/socialpost/student_socialpost.html
@@ -2,7 +2,27 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head th:insert="~{/front-end/included-head}"></head>
+<style>
 
+.uId{
+display:none; 
+}
+.uNickname{
+display:none;
+}
+.uHeadshot{
+display:none;
+}
+#resultsContainer{
+display:none;
+}
+#resultsContainer.show{
+display:block;
+}
+.sessionUId{
+display:none;
+}
+</style>
 <body class="rbt-header-sticky">
 	<header th:replace="front-end/header.html"></header>
 	<div th:insert="front-end/header_moblie.html"></div>
@@ -65,10 +85,10 @@
 								<div class="content-social-post">
 									<div class="content-inner">
 										<div class="user-section-title">
-											<span th:text="${userShowPostVO.uId}" class="uid-for-send"></span>
+											<span th:text="${userVO.uId}" class="uid-for-send"></span>
 											<div id="article">
 												<img
-													th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userShowPostVO.uId}"
+													th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userVO.uId}"
 													alt="">
 											</div>
 											<div id="article member-col">
@@ -99,11 +119,13 @@
 
 								<div class="row g-5 member-post">
 
-
+<!-- 									測試	 -->
+<span th:text="${sessionUId}" class="sessionUId"></span>
 									<input type="text" placeholder="在想甚麼呢?"
-										class="member-post-input" th:if="${#strings.isEmpty(navUId)}">
+										class="member-post-input" th:if="${userVO.uId != null and sessionUId != null and userVO.uId == sessionUId}">
+										
 
-									<p class="add-post" th:if="${#strings.isEmpty(navUId)}">新增貼文</p>
+									<p class="add-post" th:if="${userVO.uId != null and sessionUId != null and userVO.uId == sessionUId}">新增貼文</p>
 
 
 
@@ -163,27 +185,27 @@
 							<span th:if="${navUId != null}" th:text="${navUId}"
 								class="navUId">aaa</span>
 							<!-- 							<span th:if="${#strings.isEmpty(navUId)}" >測試字 - 新增貼文</span> -->
-							<div th:each="socialPost : ${userShowPostVO.socialposts}"
+							<div th:each="socialPost : ${userVO.socialposts}"
 								th:if="${socialPost.spstatus == 1}">
 
 								<div class="article-post">
 									<div class="title">
 										<div class="title-info-wrapper">
 											<img
-												th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userShowPostVO.uId}"
+												th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${userVO.uId}"
 												alt="">
 
 											<div class="title-info">
-												<p th:text="${userShowPostVO.uNickname}"></p>
+												<p th:text="${userVO.uNickname}"></p>
 												<p
 													th:text="${#dates.format(socialPost.sptime, 'yyyy年MM月dd日')}"></p>
 											</div>
 										</div>
 										<div class="button-container">
 											<img th:src="@{/images/social-edit.png}" alt="" class="edit"
-												th:if="${#strings.isEmpty(navUId)}"> <img
+												th:if="${userVO.uId != null and sessionUId != null and userVO.uId == sessionUId}"> <img
 												th:src="@{/images/social-delete.png}"
-												th:if="${#strings.isEmpty(navUId)}" alt=""
+												th:if="${userVO.uId != null and sessionUId != null and userVO.uId == sessionUId}" alt=""
 												class="delete-socialpost">
 										</div>
 									</div>
@@ -221,7 +243,7 @@
 										</div>
 									</div>
 									<div class="post-content-edit">
-										<form th:action="@{update_social_post}" method="post"
+										<form th:action="@{update_social_post/{uId}(uId=${userVO.uId})}" method="post"
 											enctype="multipart/form-data">
 											<textarea name="spcontent" id="spcontent_textarea" cols="30"
 												rows="10" th:value="${socialPost.spcontent}"
